Rename GetUserById as GetUserMatches
