# src/SFA.DAS.DigitalCertificates.Api/swagger.json
@@ -1056,7 +1056,7 @@
         }
       }
     },
-    "/api/users/id/{userId}": {
+    "/api/users/{userId}/matches": {
       "get": {
         "tags": [
           "Users"
@@ -1078,17 +1078,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetUserByIdResponse"
+                  "$ref": "#/components/schemas/GetUserMatchesResponse"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetUserByIdResponse"
+                  "$ref": "#/components/schemas/GetUserMatchesResponse"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetUserByIdResponse"
+                  "$ref": "#/components/schemas/GetUserMatchesResponse"
                 }
               }
             }
@@ -2102,7 +2102,36 @@
         },
         "additionalProperties": false
       },
-      "GetUserByIdResponse": {
+      "GetUserIdentityResponse": {
+        "type": "object",
+        "properties": {
+          "identity": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/IdentityNameDto"
+            },
+            "nullable": true
+          },
+          "dateOfBirth": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "authorisation": {
+            "$ref": "#/components/schemas/AuthorisationResponse"
+          },
+          "excluded": {
+            "type": "array",
+            "items": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "GetUserMatchesResponse": {
         "required": [
           "emailAddress",
           "govUkIdentifier"
@@ -2147,35 +2176,6 @@
         },
         "additionalProperties": false
       },
-      "GetUserIdentityResponse": {
-        "type": "object",
-        "properties": {
-          "identity": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/IdentityNameDto"
-            },
-            "nullable": true
-          },
-          "dateOfBirth": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
-          "authorisation": {
-            "$ref": "#/components/schemas/AuthorisationResponse"
-          },
-          "excluded": {
-            "type": "array",
-            "items": {
-              "type": "integer",
-              "format": "int64"
-            },
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
       "GetUserResponse": {
         "type": "object",
         "properties": {
@@ -2206,18 +2206,6 @@
           },
           "isLocked": {
             "type": "boolean"
-          },
-          "dateOfBirth": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
-          "names": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/NameDto"
-            },
-            "nullable": true
           }
         },
         "additionalProperties": false
@@ -2229,34 +2217,6 @@
             "type": "string",
             "format": "uuid"
           },
-          "validSince": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
-          "validUntil": {
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-          },
-          "familyName": {
-            "type": "string",
-            "nullable": true
-          },
-          "givenNames": {
-            "type": "string",
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
-      "NameDto": {
-        "required": [
-          "familyName",
-          "givenNames"
-        ],
-        "type": "object",
-        "properties": {
           "validSince": {
             "type": "string",
             "format": "date-time",
@@ -2615,19 +2575,17 @@
         },
         "additionalProperties": false
       }
-    },
-    "securitySchemes": {
-      "Bearer": {
-        "type": "http",
-        "description": "Please enter token",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
-      }
     }
   },
-  "security": [
+  "tags": [
     {
-      "Bearer": [ ]
+      "name": "Sharing"
+    },
+    {
+      "name": "UserActions"
+    },
+    {
+      "name": "Users"
     }
   ]
 }
