# src/SFA.DAS.DigitalCertificates.Domain/Models/User.cs
@@ -13,8 +13,6 @@ namespace SFA.DAS.DigitalCertificates.Domain.Models
         public DateTime? LastLoginAt { get; set; }
         public DateTime CreatedAt { get; set; }
         public bool IsLocked { get; set; }
-        public DateTime? DateOfBirth { get; set; }
-        public IEnumerable<NameRecord>? Names { get; set; }
 
         public static implicit operator User?(Entities.User? source)
         {
@@ -22,19 +20,6 @@ namespace SFA.DAS.DigitalCertificates.Domain.Models
             {
                 return null;
             }
-
-            var dob = source.UserIdentities?.OrderByDescending(i => i.ValidSince).FirstOrDefault()?.DateOfBirth;
-
-            var names = source.UserIdentities?
-                .Select(i => new NameRecord
-                {
-                    ValidSince = i.ValidSince,
-                    ValidUntil = i.ValidUntil,
-                    FamilyName = i.FamilyName,
-                    GivenNames = i.GivenNames
-                })
-                .OrderByDescending(n => n.ValidSince)
-                .ToList();
 
             return new User
             {
@@ -44,9 +29,7 @@ namespace SFA.DAS.DigitalCertificates.Domain.Models
                 CreatedAt = source.CreatedAt,
                 PhoneNumber = source.PhoneNumber,
                 LastLoginAt = source.LastLoginAt,
-                IsLocked = source.IsLocked,
-                DateOfBirth = dob,
-                Names = names
+                IsLocked = source.IsLocked
             };
         }
     }
